added android support, added attributions property to place, updated readme

--- a/demo-ng/app/app.component.html
+++ b/demo-ng/app/app.component.html
@@ -8,6 +8,7 @@
         <Label text="You picked:"></Label>
         <Label [text]="place.name"></Label>
         <Label [text]="place.address"></Label>
+        <Label [text]="place.attributions"></Label>
         <Label [text]="'ID: ' + place.id"></Label>
     </StackLayout>
 </StackLayout>
