fixed ios bug, updatd readme, added ios pictures to installer script

--- a/demo-ng/app/app.component.html
+++ b/demo-ng/app/app.component.html
@@ -10,5 +10,7 @@
         <Label [text]="place.address"></Label>
         <Label [text]="place.attributions"></Label>
         <Label [text]="'ID: ' + place.id"></Label>
+        <Image src="res://powered_by_google_dark" stretch="none" style="background-color: black;"></Image>
+        <Image src="res://powered_by_google_light" stretch="none"></Image>
     </StackLayout>
 </StackLayout>
