updated installer to add browser key, added getstaticmapurl

--- a/demo-ng/app/app.component.html
+++ b/demo-ng/app/app.component.html
@@ -12,5 +12,6 @@
         <Label [text]="'ID: ' + place.id"></Label>
         <Image src="res://powered_by_google_dark" stretch="none" style="background-color: black;"></Image>
         <Image src="res://powered_by_google_light" stretch="none"></Image>
+        <Image *ngIf="staticMapUrl" [src]="staticMapUrl" width="100%" height="250"></Image>
     </StackLayout>
 </StackLayout>
